# python-project-83

./:  database.sql  .env.example  .flake8  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  repository.py  setup.cfg
.github/workflows/: python-ci.yml
page_analyzer/: app.py  repository.py  utils.py
page_analyzer/static/css/: style.css
page_analyzer/templates/: base.html  index.html  url.html  urls.html
