[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitrii L <hexletdmitrii@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"
gunicorn = "^23.0.0"
0flask = "^0.0.1"
Flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.34.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
PyYAML = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
